# ChangeLog for sci-chemistry/pymol
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/pymol/ChangeLog,v 1.71 2010/10/13 11:14:20 jlec Exp $

*pymol-1.3.1_pre3923 (13 Oct 2010)

  13 Oct 2010; Justin Lecher <jlec@gentoo.org> +pymol-1.3.1_pre3923.ebuild:
  Version Bump to pre release

  19 Sep 2010; Justin Lecher <jlec@gentoo.org> pymol-1.2.3-r1.ebuild,
  pymol-1.3.0.ebuild:
  rekeyworded for ~ppc, fixes #309007

  19 Sep 2010; Justin Lecher <jlec@gentoo.org> -pymol-0.99_rc10.ebuild,
  pymol-1.2.3-r1.ebuild, pymol-1.3.0.ebuild:
  Dropped ppc, #309007; dropped old version which doesn't work with recent
  python

  16 Sep 2010; Tomáš Chvátal <scarabeus@gentoo.org>
  pymol-0.99_rc10.ebuild, pymol-1.2.3-r1.ebuild, pymol-1.3.0.ebuild:
  virtual/glut -> media-libs/glut

  29 Jun 2010; Justin Lecher <jlec@gentoo.org> -pymol-1.2.1.ebuild:
  Removed unneeded version

  24 Jun 2010; Christoph Mende <angelos@gentoo.org> pymol-1.2.3-r1.ebuild:
  Stable on amd64 wrt bug #309007

  15 Jun 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  pymol-0.99_rc10.ebuild, pymol-1.2.1.ebuild:
  Delete deprecation warnings.

*pymol-1.3.0 (09 Jun 2010)

  09 Jun 2010; Justin Lecher <jlec@gentoo.org> +files/1.3.0-vmd.patch,
  pymol-1.2.3-r1.ebuild, +pymol-1.3.0.ebuild:
  Version Bump, fixes for usage of python.eclass

  09 Jun 2010; Justin Lecher <jlec@gentoo.org> -pymol-1.0-r1.ebuild,
  -files/pymol-1.0-r1-data-path.patch, -pymol-1.2.2.ebuild,
  -pymol-1.2.2-r2.ebuild, -pymol-1.2.2-r4.ebuild,
  -files/nosplash-gentoo.patch:
  removed old version which having problems with PYTHON ABIs stuff

  16 May 2010; Justin Lecher <jlec@gentoo.org> pymol-1.2.2-r4.ebuild,
  pymol-1.2.3-r1.ebuild:
  RESTRICT PY ABI 2.5

  23 Mar 2010; Christian Faulhammer <fauli@gentoo.org>
  pymol-1.2.3-r1.ebuild:
  stable x86, bug 309007

  11 Mar 2010; Joseph Jezak <josejx@gentoo.org> pymol-1.2.2-r4.ebuild,
  pymol-1.2.3-r1.ebuild: