@@ -1,6 +1,9 @@
 # ChangeLog for sci-chemistry/pymol
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/pymol/ChangeLog,v 1.71 2010/10/13 11:14:20 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/pymol/ChangeLog,v 1.72 2010/10/15 12:48:30 jlec Exp $
+
+  15 Oct 2010; Justin Lecher <jlec@gentoo.org> pymol-1.3.1_pre3923.ebuild:
+  Mirroring the tarball on request of dberkholz
 
 *pymol-1.3.1_pre3923 (13 Oct 2010)
 
